apollo-router/src/plugins/telemetry/logging/snapshots/uhg_custom_appollo_roouter__plugins__telemetry__logging__test__router_service@logs.snap
---
source: apollo-router/src/plugins/telemetry/logging/mod.rs
assertion_line: 39
expression: yaml
---
- fields: {}
  level: INFO
  message: response
  span:
    http.flavor: HTTP/1.1
    http.method: GET
    http.request.method: GET
    http.route: "http://example.com/"
    name: router
    otel.kind: INTERNAL
    trace_id: ""
  spans:
    - http.flavor: HTTP/1.1
      http.method: GET
      http.request.method: GET
      http.route: "http://example.com/"
      name: router
      otel.kind: INTERNAL
      trace_id: ""
