apollo-router/src/plugins/telemetry/logging/snapshots/uhg_custom_appollo_roouter__plugins__telemetry__logging__test__subgraph_service@logs.snap
---
source: apollo-router/src/plugins/telemetry/logging/mod.rs
assertion_line: 98
expression: yaml
---
- fields: {}
  level: INFO
  message: response
  span:
    apollo.subgraph.name: subgraph
    azure_region: ""
    consumer_name: ""
    graphql.document: "query { foo }"
    graphql.operation.name: ""
    name: subgraph
    otel.kind: INTERNAL
  spans:
    - apollo.subgraph.name: subgraph
      azure_region: ""
      consumer_name: ""
      graphql.document: "query { foo }"
      graphql.operation.name: ""
      name: subgraph
      otel.kind: INTERNAL
