apollo-router/src/plugins/telemetry/logging/snapshots/uhg_custom_appollo_roouter__plugins__telemetry__logging__test__supergraph_service@logs.snap
---
source: apollo-router/src/plugins/telemetry/logging/mod.rs
assertion_line: 68
expression: yaml
---
- fields: {}
  level: INFO
  message: response
  span:
    apollo_private.field_level_instrumentation_ratio: 0.01
    apollo_private.graphql.variables: "{\"a\":\"\"}"
    graphql.document: "query { foo }"
    name: supergraph
    otel.kind: INTERNAL
  spans:
    - apollo_private.field_level_instrumentation_ratio: 0.01
      apollo_private.graphql.variables: "{\"a\":\"\"}"
      graphql.document: "query { foo }"
      name: supergraph
      otel.kind: INTERNAL
